--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,6 +6,16 @@
 		div.status {
 		    width:200px;
 		}
+		a.button {
+			-webkit-appearance: button;
+			-webkit-padding-after: 3px;
+			-webkit-padding-before: 3px;
+			-webkit-padding-end: 3px;
+			-webkit-padding-start: 3px;
+			text-decoration: none;
+			color: initial;
+			margin-top: 15px;
+		}
 	</style>
   </head>
 
@@ -14,6 +24,8 @@
     <div class="status">
     	<h3>SAML to AWS STS Keys</h3>
     	<label>Activated:</label><input type="checkbox" id="chkboxactivated"></input>
+		<br />
+		<a href="../options/options.html" target="_blank" class="button">Options</a>
     </div>
 
     <script src="popup.js"></script>
