Updated the version and changelog for bugfix #6

--- a/options/changelog.html
+++ b/options/changelog.html
@@ -13,13 +13,20 @@
 	<hr>
 	
 	<div id="divInfo">
-		<p>Developed by gtclaan.com</p>
-		<p>For help, please see README at the <a href="https://github.com/gtclaancom/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
+		<p>Developed by prolane.org (Gerard Laan)</p>
+		<p>For help, please see README at the <a href="https://github.com/prolane/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
 		<p>Click <a href="options.html" target="_blank">here</a> to open the options panel for this plugin.</p>
 	</div>
 	<hr>
 	
 	<div id="divChangelog">
+		<h3>2017-nov-01<br>v2.1</h3>
+		<ul>
+			<li>Bug fix: Chrome 62 broke the extension. Special thanks for <a href="https://github.com/bdruth" target="_blank">Brice</a> for contributing. Thanks to <a href="https://gitlab.com/gbvanrenswoude" target="_blank">Gijs</a> for helping out with testing.</li>
+		</ul>
+		<br />
+		<br />
+
 		<h3>2016-nov-21<br>v2.0</h3>
 		<ul>
 			<li>Added functionality to specify Role ARN's in the options panel. This is meant for cross-account assume-role API calls. For each specified role temporary credentials will be fetched and added to the credentials file.</li>
