--- a/options/options.html
+++ b/options/options.html
@@ -13,8 +13,8 @@
 	<hr>
 	
 	<div id="divInfo">
-		<p>Developed by gtclaan.com</p>
-		<p>For help, please see README at the <a href="https://github.com/gtclaancom/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
+		<p>Developed by prolane.org (Gerard Laan)</p>
+		<p>For help, please see README at the <a href="https://github.com/prolane/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
 	</div>
 	
 	<div id="divSettings">
