--- a/options/changelog.html
+++ b/options/changelog.html
@@ -6,20 +6,20 @@
     <title>Changelog for 'SAML to AWS STS Keys Converter'</title>
   </head>
   <body>
-  <div id="divTitle">
-    <div id="divIcon" class="inline-div"><img src="../icons/icon_128.png" alt="Icon" height="50" width="50"></div>
-    <div id="divHeader" class="inline-div"><h2>Changelog for 'SAML to AWS STS Keys Converter'</h2></div>
+  <div class="header">
+    <div class="inline-div"><img src="../icons/icon_128.png" alt="Icon" height="50" width="50"></div>
+    <div class="title inline-div"><h2>Changelog for 'SAML to AWS STS Keys Converter'</h2></div>
   </div>
   <hr>
 
-  <div id="divInfo">
+  <div>
     <p>Developed by prolane.org (Gerard Laan)</p>
     <p>For help, please see README at the <a href="https://github.com/prolane/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
     <p>Click <a href="options.html" target="_blank">here</a> to open the options panel for this plugin.</p>
   </div>
   <hr>
 
-  <div id="divChangelog">
+  <div class="changelog">
     <h3>2017-nov-01<br>v2.1</h3>
     <ul>
       <li>Bug fix: Chrome 62 broke the extension. Special thanks for <a href="https://github.com/bdruth" target="_blank">Brice</a> for contributing. Thanks to <a href="https://gitlab.com/gbvanrenswoude" target="_blank">Gijs</a> for helping out with testing.</li>
