Rewrite popup.js to make better use of jQuery

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,11 +23,12 @@
 
     <div class="status">
       <h3>SAML to AWS STS Keys</h3>
-      <label>Activated:</label><input type="checkbox" id="chkboxactivated"></input>
+      <label>Activated:</label><input type="checkbox" id="activated"></input>
       <br />
       <a href="../options/options.html" target="_blank" class="button">Options</a>
     </div>
 
+    <script src="../lib/jquery-3.1.1.min.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
