--- a/background/background.html
+++ b/background/background.html
@@ -3,6 +3,7 @@
   <head>
   </head>
   <body>
+    <script src="../lib/jquery-3.1.1.min.js"></script>
     <script src="../lib/aws-sdk-2.7.5.min.js"></script>
     <script src="script.js"></script>
   </body>
