--- a/options/changelog.html
+++ b/options/changelog.html
@@ -20,6 +20,13 @@
 	<hr>
 	
 	<div id="divChangelog">
+		<h3>2018-may-12<br>v2.2</h3>
+		<ul>
+			<li>Now supports the SessionDuration SAML attribute which can be set by your IDP administrator. This can keep your credentials valid longer than the default 1 hour. Thanks to <a href="https://github.com/ashemedai" target="_blank">Jeroen</a> for his contribution!</li>
+		</ul>
+		<br />
+		<br />
+
 		<h3>2017-nov-01<br>v2.1</h3>
 		<ul>
 			<li>Bug fix: Chrome 62 broke the extension. Special thanks for <a href="https://github.com/bdruth" target="_blank">Brice</a> for contributing. Thanks to <a href="https://gitlab.com/gbvanrenswoude" target="_blank">Gijs</a> for helping out with testing.</li>
