--- a/options/changelog.html
+++ b/options/changelog.html
@@ -20,6 +20,13 @@
 	<hr>
 	
 	<div id="divChangelog">
+		<h3>2018-may-14<br>v2.3</h3>
+		<ul>
+			<li>Release 2.2 revealed many users have their SAML provider requesting a SessionDuration which is higher than the maximum session duration configured at the IAM Role. Release 2.3 now supports manually enabling or disabling this SessionDuration feature. The feature is enabled by default, but can be disabled in the options.</li>
+		</ul>
+		<br />
+		<br />
+
 		<h3>2018-may-12<br>v2.2</h3>
 		<ul>
 			<li>Now supports the SessionDuration SAML attribute which can be set by your IDP administrator. This can keep your credentials valid longer than the default 1 hour. Thanks to <a href="https://github.com/ashemedai" target="_blank">Jeroen</a> for his contribution!</li>
