--- a/options/options.html
+++ b/options/options.html
@@ -23,6 +23,16 @@
 			<br />
 			<input type="text" name="FileName" id="FileName" size="40">
 		</div>
+
+		<div id="divSessionDuration" class="setting-part">
+			<label>[OPTIONAL]</label><br>
+			<label>Apply the SessionDuration requested by the SAML provider.</label>
+			<br />
+			<select name="SessionDuration" id="SessionDuration">
+				<option value="yes">yes</option>
+				<option value="no">no</option>
+			</select>
+		</div>
 		
 		<div id="divRoles" class="setting-part">
 			<label>[OPTIONAL]</label><br>
