--- a/options/changelog.html
+++ b/options/changelog.html
@@ -20,6 +20,13 @@
 	<hr>
 	
 	<div id="divChangelog">
+		<h3>2018-aug-2<br>v2.4</h3>
+		<ul>
+			<li>Bug fix for users with one IAM role in the SAML claim. Bug was introduced with release 2.1, but according to user reports only results in an error starting with Chrome release 68.</li>
+		</ul>
+		<br />
+		<br />
+
 		<h3>2018-may-14<br>v2.3</h3>
 		<ul>
 			<li>Release 2.2 revealed many users have their SAML provider requesting a SessionDuration which is higher than the maximum session duration configured at the IAM Role. Release 2.3 now supports manually enabling or disabling this SessionDuration feature. The feature is enabled by default, but can be disabled in the options.</li>
