Debug logs added to options panel

--- a/options/options.html
+++ b/options/options.html
@@ -26,9 +26,16 @@
 
 		<div id="divSessionDuration" class="setting-part">
 			<label>[OPTIONAL]</label><br>
-			<label>Apply the SessionDuration requested by the SAML provider.</label>
+			<label>Apply the SessionDuration requested by the SAML provider</label>
 			<br />
 			<select name="SessionDuration" id="SessionDuration">
+				<option value="yes">yes</option>
+				<option value="no">no</option>
+			</select>
+			<br><br>
+			<label>Enable DEBUG logs</label>
+			<br />
+			<select name="DebugLogs" id="DebugLogs">
 				<option value="yes">yes</option>
 				<option value="no">no</option>
 			</select>
