Implement account aliases

--- a/options/options.html
+++ b/options/options.html
@@ -50,6 +50,12 @@
 				<option value="no">no</option>
 			</select>
 		</div>
+		<div id="divAliases" class="setting-part">
+			<label>[OPTIONAL]</label><br>
+			<label>Specify a list of account number to alias mappings. The specified account numbers will be replaced with the associated alias in the generated credentials file.</label>
+			<div id="account_aliases" class="inline-div">
+			</div>
+		</div>
 
 		<div id="divRoles" class="setting-part">
 			<label>[OPTIONAL]</label><br>
