--- a/options/options.html
+++ b/options/options.html
@@ -40,7 +40,17 @@
 				<option value="no">no</option>
 			</select>
 		</div>
-		
+
+		<div id="divSessionDuration" class="setting-part">
+			<label>[OPTIONAL]</label><br>
+			<label>Assume all roles available from SAML provider.</label>
+			<br />
+			<select name="AssumeAllRoles" id="AssumeAllRoles">
+				<option value="yes">yes</option>
+				<option value="no">no</option>
+			</select>
+		</div>
+
 		<div id="divRoles" class="setting-part">
 			<label>[OPTIONAL]</label><br>
 			<label>Specify a list of Role ARN's. For each role the plugin will call the assume-role API. The fetched AWS STS keys will be added to the output file as separate profiles.</label>
