--- a/options/changelog.html
+++ b/options/changelog.html
@@ -20,7 +20,14 @@
 	<hr>
 	
 	<div id="divChangelog">
-		<h3>2019-feb-8<br>v2.7</h3>
+		<h3>2022-jun-29<br>v2.8</h3>
+		<ul>
+			<li>At request of Google, the "tabs" permission is removed.</li>
+		</ul>
+		<br />
+		<br />
+    
+    <h3>2019-feb-8<br>v2.7</h3>
 		<ul>
 			<li>Changed permissions. The extension will now ask access to any requested URL. This is needed because of changed policy in Chrome 72 for the chrome.webRequest API. Read <a href="https://github.com/prolane/samltoawsstskeys/issues/28#issuecomment-461938267" target="_blank">here</a> for the rationale behind it. Fixes <a href="https://github.com/prolane/samltoawsstskeys/issues/28" target="_blank">#28</a>.</li>
 		</ul>
