Set default SessionDuration to 4h

--- a/options/changelog.html
+++ b/options/changelog.html
@@ -13,13 +13,22 @@
 	<hr>
 	
 	<div id="divInfo">
-		<p>Developed by prolane.org (Gerard Laan)</p>
-		<p>For help, please see README at the <a href="https://github.com/prolane/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
+		<p>Developed by prolane.org (Gerard Laan)<br>Forked by Proucnkk</p>
+		<p>For help, please see README at the <a href="https://github.com/prounckk/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
 		<p>Click <a href="options.html" target="_blank">here</a> to open the options panel for this plugin.</p>
 	</div>
 	<hr>
 	
 	<div id="divChangelog">
+		<h3>2022-nov-01<br>v2.9</h3>
+		<ul>
+			<li>Set default SessionDuration to 4h</li>
+			<li>TODO: check why settings are not stored at local storage. browser: Brave</li>
+			<li>TODO: move to manifest v3</li>
+		</ul>
+		<br />
+		<br />
+
 		<h3>2022-jun-29<br>v2.8</h3>
 		<ul>
 			<li>At request of Google, the "tabs" permission is removed.</li>
