--- a/options/options.html
+++ b/options/options.html
@@ -13,7 +13,7 @@
 	<hr>
 	
 	<div id="divInfo">
-		<p>Developed by prolane.org (Gerard Laan)</p>
+		<p>Developed by prolane.org (Gerard Laan), forked by Prounckk</p>
 		<p>For help, please see README at the <a href="https://github.com/prolane/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
 	</div>
 	
@@ -39,6 +39,11 @@
 				<option value="yes">yes</option>
 				<option value="no">no</option>
 			</select>
+		</div>
+		<div id="divFilename" class="setting-part">
+			<label>Set SessionDuration in Seconds. ex: 14400 is 4 hours</label>
+			<br />
+			<input type="text" name="SessionDurationSeconds" id="SessionDurationSeconds" size="40">
 		</div>
 		
 		<div id="divRoles" class="setting-part">
