--- a/options/changelog.html
+++ b/options/changelog.html
@@ -23,7 +23,7 @@
 		<h3>2022-nov-01<br>v2.9</h3>
 		<ul>
 			<li>Set default SessionDuration to 4h</li>
-			<li>TODO: check why settings are not stored at local storage. browser: Brave</li>
+			<li>Added a field to set custom SessionDuration</li>
 			<li>TODO: move to manifest v3</li>
 		</ul>
 		<br />
