Added Support of custom Session Duration

--- a/options/changelog.html
+++ b/options/changelog.html
@@ -13,8 +13,8 @@
 	<hr>
 	
 	<div id="divInfo">
-		<p>Developed by prolane.org (Gerard Laan)<br>Forked by Proucnkk</p>
-		<p>For help, please see README at the <a href="https://github.com/prounckk/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
+		<p>Developed by prolane.org (Gerard Laan)</p>
+		<p>For help, please see README at the <a href="https://github.com/prolane/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
 		<p>Click <a href="options.html" target="_blank">here</a> to open the options panel for this plugin.</p>
 	</div>
 	<hr>
@@ -23,8 +23,7 @@
 		<h3>2022-nov-01<br>v2.9</h3>
 		<ul>
 			<li>Set default SessionDuration to 4h</li>
-			<li>Added a field to set custom SessionDuration</li>
-			<li>TODO: move to manifest v3</li>
+			<li>Adds a field to set custom Session Duration</li>
 		</ul>
 		<br />
 		<br />
