Update plugin version to v3.0

--- a/options/changelog.html
+++ b/options/changelog.html
@@ -20,6 +20,15 @@
 	<hr>
 	
 	<div id="divChangelog">
+    <h3>2022-dec-15<br>v3.0</h3>
+		<ul>
+			<li>Code refactoring due to upgrading to Extension Manifest V3.</li>
+      <li>Improved popup styling.</li>
+      <li>LCM on dependency libs.</li>
+		</ul>
+		<br />
+		<br />
+
 		<h3>2022-jun-29<br>v2.8</h3>
 		<ul>
 			<li>At request of Google, the "tabs" permission is removed.</li>
