Fix #58. Parse various SAML Assertion AttributeValue syntax in a consistent way.

--- a/options/changelog.html
+++ b/options/changelog.html
@@ -20,6 +20,13 @@
 	<hr>
 	
 	<div id="divChangelog">
+    <h3>2022-dec-16<br>v3.1</h3>
+		<ul>
+			<li>Fix <a href="https://github.com/prolane/samltoawsstskeys/issues/58" target="_blank">#58</a>. Parse various SAML Assertion AttributeValue syntax in a consistent way.</li>
+		</ul>
+		<br />
+		<br />
+
     <h3>2022-dec-15<br>v3.0</h3>
 		<ul>
 			<li>Code refactoring due to upgrading to Extension Manifest V3.</li>
